--- a/home.html
+++ b/home.html
@@ -31,7 +31,11 @@
 
       <h2>WELCOME TO OUR PAGE</h2>
 
-      <p>We Design, We print, We Deliver 100%</p>
+      <p>
+        <span style="color: blue">We Design,</span>
+        <span style="color: gold">We print,</span>
+        <span style="color: lime">We Deliver 100%</span>
+      </p>
     </fieldset>
   </body>
 </html>
