--- a/home.html
+++ b/home.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home</title>
+
+    <title>home page</title>
+
     <style>
+      body {
+        background: rgba(231, 230, 230, 0.329);
+      }
+
       h1,
       h2 {
         color: red;
@@ -19,6 +25,10 @@
       fieldset {
         border: 2px solid;
         border-radius: 50px;
+      }
+      span {
+        background: #232324;
+        border-radius: 3px;
       }
     </style>
   </head>
