--- a/learn.html
+++ b/learn.html
@@ -15,11 +15,10 @@
         class="login_form"
         method="post"
         name="form"
-        onsubmit="return
-      validated()"
+        onsubmit="return validated()"
       >
         <div class="font">Email or Phone</div>
-        <input type="text" name="email" placeholder="Email or Phone*" />
+        <input type="email" name="email" placeholder="Email or Phone*" />
         <div id="email_err">Please fill up email or Phone</div>
 
         <div class="font2">Password</div>
